feign-client, .yml